[package]
name = "esp32c-rt"
version = "0.1.0"
repository = "https://github.com/ducktec/esp32c-rt"
authors = ["Robert Wiewel <dev@ducktec.de>"]
edition = "2018"
description = "Minimal runtime / startup for ESP32-C series CPU's"
keywords = ["riscv", "runtime", "startup", "esp32-c3"]
license = "ISC"
categories = [
    "embedded",
    "hardware-support",
    "no-std",
]

[dependencies]
r0 = "1.0.0"
riscv = "0.7"
riscv-rt-macros = "0.1.6"

[features]
default=["direct-boot"]
inline-asm = ["riscv/inline-asm"]
direct-boot = []

[build-dependencies]
riscv-target = "0.1.2"